<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/movie_tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/community_main_board"
        android:textStyle="bold" />

    <include
        layout="@layout/shequ_bankuai1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/movie_tv_text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/movie_tv_sub_board"
        android:textStyle="bold" />

    <include
        layout="@layout/shequ_bankuai2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/movie_tv_text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/movie_tv_popular_board"
        android:textStyle="bold" />

    <include
        layout="@layout/shequ_bankuai3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

</LinearLayout>