<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/community_posts_board_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/community_posts_board_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxHeight="30dp"
            android:text="@string/community_posts_board_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/community_posts_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/community_posts_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/community_posts_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/community_posts_user_id" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/community_posts_share_num"
                app:srcCompat="@android:drawable/arrow_up_float" />

            <TextView
                android:id="@+id/community_posts_share_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/community_posts_share_num" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/community_posts_zan_num"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/community_posts_zan_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/community_posts_zan_num" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/community_posts_comment_num"
                app:srcCompat="@android:drawable/stat_notify_chat" />

            <TextView
                android:id="@+id/community_posts_comment_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/community_posts_comment_num" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>